[metadata]
name = sshm
version = 0.0.6
author = wqy
author_email = qiyingwangwqy@gmail.com
description = SSH with account managing
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/WqyJh/sshm
keywords = ssh, paramiko
license = GNU General Public License v3
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md