[bdist_wheel]
universal = 1

[metadata]
name = sshx
author = wqy
author_email = qiyingwangwqy@gmail.com
description = SSH with account managing
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/WqyJh/sshx
keywords = ssh, paramiko
license = GNU General Public License v3
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.rst, *.md